# uservice-webapi/host/src/main/java/onlexnet/webapi/ws/ChatApiHandler.java
@@ -11,6 +11,7 @@ import onlexnet.webapi.openai.Message;
 import onlexnet.webapi.openai.MessageRole;
 import onlexnet.webapi.openai.OpenAi;
 import onlexnet.webapi.ws.api.ChatApiDelegate;
+import onlexnet.webapi.ws.model.TextDTO;
 
 @Component
 @RequiredArgsConstructor
@@ -19,11 +20,12 @@ class ChatApiHandler implements ChatApiDelegate {
   private final OpenAi ai;
 
   @Override
-  public ResponseEntity<String> welcomeMessage() {
+  public ResponseEntity<TextDTO> welcomeMessage() {
     var initialUserMessageToGetInitialAssistantMessage = "What you can do for me?";
     var initialUserMessage = new Message(initialUserMessageToGetInitialAssistantMessage, MessageRole.USER);
     var locale = LocaleContextHolder.getLocale();
     var assistantResponse = ai.getContinuation(List.of(initialUserMessage), locale);
-    return ResponseEntity.ok(assistantResponse);
+    var asDto = new TextDTO(assistantResponse);
+    return ResponseEntity.ok(asDto);
   }
 }
